@@ -1,3 +1,6 @@
+* Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
+- Update badges and contribution guide URL in README.md
+
 * Thu Sep 13 2018 Nick Miller <Nick.miller@onyxpoint.com> - 7.2.0-0
 - Add support for Puppet 5
 - Add reference.md
